--- a/systemd-wsl2-kali/Makefile
+++ b/systemd-wsl2-kali/Makefile
@@ -5,7 +5,7 @@ all:
  
 install:
   @echo Online install for Ubuntu WSL2 systemd Hack
-  curl https://raw.githubusercontent.com/wackyblackie/ubuntu-wsl2-systemd-script/master/ubuntu-wsl2-systemd-script.sh | bash
+  curl https://github.com/haise0/kalitorify-wsl2/blob/master/systemd-wsl2-kali/kali-wsl2-systemd-script.sh | bash
   @echo Run \'sudo make disable\' to disable systemd hack
   @echo Run \'sudo make uninstall\' to uninstall systemd hack
  
