--- a/systemd-wsl2-kali/Makefile
+++ b/systemd-wsl2-kali/Makefile
@@ -5,13 +5,13 @@ all:
  
 install:
   @echo Online install for Ubuntu WSL2 systemd Hack
-  curl https://github.com/haise0/kalitorify-wsl2/blob/master/systemd-wsl2-kali/kali-wsl2-systemd-script.sh | bash
+  curl https://raw.githubusercontent.com/haise0/kalitorify-wsl2/master/systemd-wsl2-kali/kali-wsl2-systemd-script.sh | bash
   @echo Run \'sudo make disable\' to disable systemd hack
   @echo Run \'sudo make uninstall\' to uninstall systemd hack
  
  uninstall:
   @echo Online uninstall for Ubuntu WSL2 systemd Hack
-  curl https://github.com/haise0/kalitorify-wsl2/blob/master/systemd-wsl2-kali/uninstall.sh | bash
+  curl https://raw.githubusercontent.com/haise0/kalitorify-wsl2/master/systemd-wsl2-kali/uninstall.sh | bash
  
  disable:
   @echo Offline systemd Hack disable
